client/styles/strider.less
@import "libs.less";
@import "config.less";
@import "build.less";
@import "dashboard.less";
@import "projects.less";
@import "admin/users.less";
@import "admin/plugins.less";

@import "strider-colors.less";
@import "alerts.less";

html, body {
  height: 100%;
}

body {
  background-color: #fff;
}

.wrap {
  min-height: 100% !important;
}


[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak {
  display: none !important;
}

.truncate {
  width: 340px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#kickoff-app {
  .github-main-content p,
  .github-main-content {
    font-size: 18px;
    line-height: 26px;
  }
}

#build-page {
  .job-title h3 {
    .test-only-action {
      color: green;
    }

    .test-and-deploy-action {
      color: rgb(41, 0, 255);
    }
  }

  #list-of-builds {
    max-height: 672px;

    .truncate {
      max-width: 110px;
      display: block;
    }

    td.committer {
      padding: 0;
      img {
        margin-top: 4px;
        height: 25px;
        width: 25px;
        max-width: inherit;
      }
    }
    tr {
      background-color: transparent;
      cursor: pointer;
    }
    .active.failed {
      background-color: @strider-bg-failed;
    }
    .active.errored {
      background-color: @strider-bg-errored;
    }
    .active.passed {
      background-color: @strider-bg-passed;
    }
    .active.running {
      background-color: @strider-bg-running;
    }
    tr:hover {
      background-color: #eee;
    }
  }
  .job-link {
    min-width: 73px;
  }
  .commit-url {
    width: auto;
  }
}

.last-builds {
  border-collapse: separate;
  border-spacing: 2px;
  margin: 9px;
  .status-passed { background-color: @strider-bg-passed; }
  .status-failed { background-color: @strider-bg-failed; }
  .status-errored { background-color: @strider-bg-errored; }
}

.progress {
  margin-bottom: 0;
}

.dashboard-row,
#dashboard table tr {
  padding: 10px 0;
  .action-buttons {
    div {
      visibility: hidden;
    }
  }
  td {
    padding: 10px 0;
    position: relative;
    font-size: 16px;
    a:hover {
      text-decoration: none;
    }
  }

  td > a,
  td > span {
    display: inline-block;
    padding: 5px 10px;
  }
  span.clickable,
  a {
    color: black;
    cursor: pointer;
  }
  .github-link {
    width: 1px;
  }
  &:hover {
    .action-buttons {
      & > div {
        visibility: visible;
      }
    }
  }
  .small-text {
    display: inline-block;
  }
  .action-buttons {
    width: 100px;
    text-align: center;
    .btn-group {
      padding-top: 4px;
    }
  }
  .progress-meter {
    .progress {
      margin-bottom: 0;
    }
  }
  .committer {
    a {
      padding: 0;
    }
    img {
      width: 35px;
      height: 35px;
      max-width: inherit;
      margin-bottom: -13px;
      margin-top: -1px;
    }
  }
  .project-name {
    a {
      font-size: 18px;
      line-height: 27px;
      font-weight: 700;
      width: 100%;
    }
  }
  .run-time {
    text-align: center;
  }
  i {
    font-size: 150%;
  }
  .commit-url {
    max-width: 300px;
    overflow: hidden;
  }
  .clickable i:hover,
  a:hover {
    color: #aaa;
  }
}

.dashboard-row {
  .finished-at,
  .refresh,
  .commit-url,
  .committer,
  .deploy,
  .configure,
  .run-time,
  .job-link {
    width: 1px;
    white-space: nowrap;
  }
}

@media (max-width: 1304px) {
  #dashboard {
    .history,
    .job-link a span {
      display: none;
    }
  }
}

@media (max-width: 980px) {
  #dashboard {
    .triggered-by-header,
    .commit-url,
    .job-link a span {
      display: none;
    }
  }
}

@media (min-width: 769px) {
  #dashboard {
    .finished-at,
    .refresh,
    .commit-url,
    .committer,
    .deploy,
    .configure,
    .run-time,
    .job-link {
      width: 1px;
      white-space: nowrap;
    }
  }
}

@media (max-width: 767px) {
  #dashboard {
    .finished-at {
      display: none;
    }
  }

  #build-page .job-title h3 {
    margin-bottom: 0.5em;
  }

  .navbar-fixed-top {
    margin-bottom: 0;
  }
}

@media (max-width: 650px) {
  #dashboard {
    overflow: auto;

    .deploy,
    .deploy-header,
    .refresh,
    .refresh-header,
    .configure,
    .configure-header,
    .committer,
    .committer-header,
    .github-header,
    .github-link {
      display: none;
    }
  }
}

@media (max-width: 450px) {
  #dashboard {
    table tr .project-name a {
      font-size: 14px;
      font-weight: normal;
      line-height: 25px;
    }
  }
}

.configure-action i {
  margin-top: 4px;
  display: inline-block;
  margin-left: 5px;
}

.docs-section {
  padding-top: 40px;
}
.docs p {
  font-size: 15px;
}
img.manual_setup {
  border: 1px solid #021a40;
}
.success {
  background: #9BCD9B;
}
.failure {
  background: #EE6363;
}
.success-text {
  color: #46a546;
}
.failure-text {
  color: #9d261d;
}
.error-text {
  color: #999;
}
.waiting-text {
  color: #0af;
}

footer {
  border-top:1px solid #ddd;
  background-color:#f0f0f0;
  margin-top:30px;
  padding:10px;
}

footer p {
  text-align: center;
  /* center align it with the container */

}
.dashboard-button,
.repo-action,
.start-manual-setup {
  float: right;
}
.header-emphasis {
  color: #455b87;
}
.job-pre-console {
  margin-top: 0;

  .job-pre-console-inner {
    min-height: 0;
  }
}
.job-list {
  border: 1px solid;
  border-radius: 3px;
  margin-left: 10px;
}
.job-list-item {
  width: 95%;
  border: 1px solid;
  border-radius: 3px;
  padding: 5px;
  margin: 10px;
}
.job-list-item:nth-child(2n) {
  background-color: #f5f5f5;
}
.job-notice {
  float: right;
}
#build-metadata {
  padding: 8px;
  border-radius: 3px;
}
#list-of-builds {
  overflow: auto;

  table {
    margin-bottom: 0;
  }
}
#build-detail-buttons {
  border: 1px solid;
  border-radius: 3px;
  margin-left: 10px;
  padding: 10px;
}
.build-list-item {
  width: auto;
  padding: 5px;
  border-bottom: 1px solid #CCB;
}
.build-list-header {
  width: 90%;
}
#commit-id,
.build-item-committer {
  float: right;
}
/* ... */

